fix: Correct webkit rendering issue.
Images in the gallery section were getting all distorted in Safari and 
Chrome, probably due to interactions between grid and flexbox. This fix 
clears that right up, ensuring images retain their original proportions 
and I don't seem like a totally crap design-monster.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -708,10 +708,19 @@ figcaption {
 
 .portfolio-panel-text,
 .portfolio-panel-gallery {
+  padding: 2.4rem 1.6rem 1.6rem;
+}
+
+.portfolio-panel-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2.4rem 1.6rem 1.6rem;
+}
+
+.portfolio-panel-gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 800px) {
